manifests/tenants/my-tenant/company-services/hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: my-tenant-hermes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hermes
  ports:
    - name: http
      port: 80
      targetPort: 8080
